# gcodesender

./: Cargo.toml  build.rs  example.gcode  example1.gcode  fullface.gcode  poptest.gcode  testrejection.gcode
src/: cnc_dashboard.slint  conn.rs  custom_button.slint  job_controller.rs  main.rs
