[package]
name = "gcodesender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "*"
tokio-util = "0.7.17"
slint = { version = "*"}
rfd = "0.15.4"

[build-dependencies]
slint-build = "*"

# Optional for logging if desired
log = "0.4"
env_logger = "0.10"
rfd = "0.15.4"
